tests/parsing/smtlib/v2.6/errors/140_datatype_arity_dec_bad_num_1.expected
File "tests/parsing/smtlib/v2.6/errors/140_datatype_arity_dec_bad_num_1.smt2", line 2, character 25-26:
2 | (declare-datatypes ((foo _)))
                             ^
Error while parsing a datatype arity declaration, read the reserved word '_',
      but expected a numeral for the datatype arity.
